Update to fix overflow & root display height

--- a/loginscreen/simple-login/client/src/index.css
+++ b/loginscreen/simple-login/client/src/index.css
@@ -1,3 +1,8 @@
-body {
+html, body {
     margin: 0;
+    overflow-x: hidden;
+}
+
+#root {
+    height: 100vh;
 }
